<resources>
    <string name="app_versions">1.0</string>
    <string name="app_name">捷旅印然</string>
    <string name="login">登入</string>
    <string name="email">信箱</string>
    <string name="password">密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="Guest_login">遊客登入</string>
    <string name="password_repeat">確認密碼</string>
    <string name="back">返回</string>
    <string name="username">使用者名稱</string>
    <string name="user_Photo_stickers">頭像選擇</string>
    <string name="Submit_registration">送出註冊</string>
    <string name="register">前往註冊帳號</string>
    <string name="register_r">註冊帳號</string>
    <string name="Task">任務</string>
    <string name="Achievement">成就</string>
    <string name="setting_text">設定</string>
    <string name="logout">登出</string>
    <string name="settiing_user">個人資料</string>
    <string name="settiing_notifications">通知</string>
    <string name="settiing_moonmode">黑暗模式</string>
    <string name="Gender_Male">男性</string>
    <string name="Gender_Female">女性</string>
    <string name="Gender_Other">其他/不方便透露</string>
    <string name="register_left_text">尚未註冊帳號?</string>
    <string name="wecome_text">歡迎來到，捷旅印然</string>
    <string name="scan_result">掃描結果</string>
    <string name="route_BL">板南線</string>
    <string name="route_BR">文湖線</string>
    <string name="route_G">松山新店線</string>
    <string name="route_O">中和新蘆線</string>
    <string name="route_Y">環狀線</string>
    <string name="route_R">淡水信義線</string>
    <string name="route_R22A">新北投支線</string>
    <string name="route_G03A">小碧潭支線</string>
    <string name="route_BL_en">BL</string>
    <string name="route_BR_en">BR</string>
    <string name="route_G_en">G</string>
    <string name="route_O_en">O</string>
    <string name="route_Y_en">Y</string>
    <string name="route_R_en">R</string>
    <string name="scan">掃描</string>
    <string name="Camera_verify_btn">集章去</string>
    <string name="start_station">起點</string>
    <string name="end_station">終點</string>
    <string name="total_times">預計搭乘時間</string>
    <string name="total_money">票價</string>
    <string name="tickey_type">票種</string>
    <string name="station_data_btn">看更多車站資訊</string>
    <string name="return_btn">重置</string>
    <string name="unanimous_vote">全票</string>
    <string name="Discount_tickets">優待票</string>
    <string name="Taipei_City_Children_Ticket">台北兒童票</string>
    <string name="dollar">元</string>
    <string name="route_planning_btn">路線規劃</string>
    <string name="Station_information">車站資訊</string>
    <string name="Station_informationText">車站介紹</string>
    <string name="Train_information">列車資訊</string>
    <string name="ExitType1_0">樓梯</string>
    <string name="ExitType1_1">無樓梯</string>
    <string name="ExitType2_0">無手扶梯</string>
    <string name="ExitType2_1">雙向扶梯</string>
    <string name="ExitType2_2">向上扶梯</string>
    <string name="ExitType2_3">向下扶梯</string>
    <string name="ExitType2_4">時段調整</string>
    <string name="ExitType3_0">電梯</string>
    <string name="ExitType3_1">無電梯</string>
    <string name="Train_arrives">列車到站</string>
    <string name="Train_arrives_time">秒後更新</string>
    <string name="remindbtn">到站提醒</string>
    <string name="errorStation">異常：環狀線部分路段因故損毀，以至於本路段資訊無法顯示</string>
    <string name="errorStation2">異常：捷運系統資訊異常，往板橋段列車可能無法正常顯示。且部分資訊讀取異常</string>
    <string name="ToStationText">往</string>
    <string name="arriving_in_minutes">%1$s 將在 %2$s 後到達</string>
    <string name="train_approaching">列車即將抵達!</string>
    <string name="train_reciprocal_error">倒數時間錯誤</string>
    <string name="setting_success_reminder">成功設定，將在到站前提醒。</string>
    <string name="StoreName">點數商城</string>
    <string name="ProductquantityName">剩餘數量</string>
    <string name="exchange">兌換</string>
    <string name="bottom_sheet_layout_title">兌換</string>
    <string name="exchange_final">確定兌換</string>
    <string name="Productquantity">剩餘數量</string>
    <string name="Redemption_successful">兌換成功</string>
    <string name="Exchange_Instructions">購買須知：本畫面僅提供模擬操作，非實際兌換。\n 本商城部分圖片為台北捷運蝦皮商城</string>
    <string name="Task_text">任務</string>
    <string name="Today_task">本日任務</string>
    <string name="Tasks_of_the_week">本周任務</string>
    <string name="This_month_tasks">本月任務</string>
    <string name="Deadline">截止時間：</string>
    <string name="Year">年</string>
    <string name="moon">月</string>
    <string name="days">日</string>
    <string name="hour">時</string>
    <string name="minute">分</string>
    <string name="Second">秒</string>
    <string name="ribbonName">尚未解鎖</string>
    <string name="Bronze_Award">銅牌獎勵</string>
    <string name="Silver_Award">銀牌獎勵</string>
    <string name="Gold_Award">金牌獎勵</string>
    <string name="Setting_default_name">使用者名稱</string>
    <string name="Setting_tab_name">名稱修改</string>
    <string name="Setting_tab_password">密碼修改</string>
    <string name="Setting_tab_Image">照片修改</string>
    <string name="Setting_btnEmail">送出驗證信</string>
    <string name="ProductName">商品名稱：</string>
    <string name="expiryTime">到期日：</string>
    <string name="Not_used_information">未使用</string>
    <string name="Expired_information">已失效</string>
    <string name="QR_quantity_Title">數量：</string>
    <string name="QR_redeemCode_Title">兌換碼：</string>
    <string name="QR_Title">掃描兌換</string>
    <string name="QR_Change_btn">確定兌換</string>
    <string name="Coupon_expired_text">已失效</string>
    <string name="No_coupon_available">無可用兌換券</string>
    <string name="No_expired_vouchers">無失效兌換券</string>
    <string name="Setting_user">個人資料</string>
    <string name="Setting_Station">小工具</string>
    <string name="Setting_coupon">兌換紀錄</string>
    <string name="Setting_language">語言</string>
    <string name="Setting_darkmode">夜間模式</string>
    <string name="Setting_FAQ">常見問題</string>
    <string name="Setting_about">聯絡我們</string>
    <string name="Setting_other">其他</string>
    <string name="Setting_logout">登出</string>
    <string name="Setting_user_title">個人資料修改</string>
    <string name="Setting_user_username">使用者名稱</string>
    <string name="Setting_user_submit">確定變更</string>
    <string name="setting_language_title">語言</string>
    <string name="setting_language_btn">變更語言</string>
    <string name="bar_home">首頁</string>
    <string name="bar_store">商城</string>
    <string name="password_repeact">確認密碼</string>
    <string name="setting_stations_spinner_route">選擇路線：</string>
    <string name="setting_stations_spinner_station">選擇站點：</string>
    <string name="setting_stations_confirm">確認站點：</string>
    <string name="setting_stations_btn">儲存</string>
    <string name="setting_stations_info">小工具介紹</string>
    <string name="setting_stations_Title">小工具-站點設置</string>
    <string name="setting_FAQ_Title">常見問題</string>
    <string name="Last_updated">最後更新時間：</string>
    <string name="dialog_Previous">上一個</string>
    <string name="dialog_Next">下一個</string>
    <string name="backdialog_title">確認離開</string>
    <string name="backdialog_msg">你確定要離開嗎?</string>
    <string name="backdialog_y">是</string>
    <string name="backdialog_n">否</string>
    <string name="faq_title_1">這個 APP 有哪些功能？</string>
    <string name="faq_ans_1">積分蒐集：使用者可以透過掃描車站 QR 碼來賺取積分。\n兌換商品：累積的積分可在 APP 中兌換精選商品。（模擬）\n捷運資訊查詢：提供即時車站資訊、票價查詢、預估行程時間、路線。\n小工具：提供捷運到站時間的即時查詢，方便用戶隨時掌握行程。</string>
    <string name="faq_title_2">是否可以修改資料？</string>
    <string name="faq_ans_2">答案：用戶可以修改個人資料，包括名稱、密碼和照片。請至「設定」頁面選擇「編輯個人資料」進行更新。</string>
    <string name="faq_title_3">如何獲取積分？</string>
    <string name="faq_ans_3">方法一：在車站掃描 QR 碼，每次掃描成功後將獲得相應的積分。\n方法二：蒐集特定站點成就，例如完成名稱有「山」的站點。\n注意：每個 QR 碼一天只能掃描一次。掃描時請確保網路連線正常，並授權相機訪問權限。</string>
    <string name="faq_title_4">如何查詢車站資訊、列車資訊或票價？</string>
    <string name="faq_ans_4">車站資訊：在 APP 中的首頁中選擇您的站點，點擊「i」圖示後至車站資訊，即可查看每個車站的詳細資訊，包括出入口位置、便利設施等。\n列車資訊：在 APP 中的首頁中選擇您的站點，點擊「i」圖示後至車站資訊，向左滑動至列車資訊後，即可查看該車站的列車到站時間。\n票價查詢：在 APP 中的首頁中選擇起點和終點站，系統會自動計算票價和預估行程時間，幫助您規劃旅程。</string>
    <string name="faq_title_5">無法掃描 QR 碼怎麼辦？</string>
    <string name="faq_ans_5">確認是否曾抵達過該站點：確保您已到達指定站點，且該站點的 QR 碼尚未被掃描，只有首次掃描的站點 QR 碼才有效。\n確認 QR 碼是否正確：請確認掃描的 QR 碼對應該捷運站點。\n其他解決方法：\n1. 清潔相機鏡頭。\n2. 檢查網路連線穩定性。\n3. 若仍無法掃描，請重啟 APP 再次嘗試。</string>
    <string name="faq_title_6">小工具如何使用？</string>
    <string name="faq_ans_6">添加小工具：首次使用時，需至「設定」頁面選擇「常用站點」，選擇您要的路線和站點，按下儲存並授權後，將小工具放置於桌面。\n站別修改：如需修改站點，可在「設定」頁面中重新選擇站別後儲存。</string>
    <string name="faq_title_7">如何使用兌換功能？</string>
    <string name="faq_ans_7">進入兌換中心：打開 APP，選擇「商城」頁面，瀏覽可兌換商品。\n確認兌換：點選「立即兌換」按鈕，取得商品兌換碼或 QR 碼。在兌換紀錄介面中，選擇未使用商品，按下「兌換」，並確定兌換。\n如何查看我兌換的商品？：進入「設定」頁面後，點選「兌換紀錄」即可查看尚未使用或已失效的商品。\n注意事項：商品兌換功能為模擬功能，並無法實際取得該商品。</string>
    <string name="faq_title_8">環狀線異常該怎麼辦？</string>
    <string name="faq_ans_8">環狀線捷運部分路段於 0403 地震中受損，導致板橋-中和路段無法運行，造成部分路段的列車到站資訊異常，敬請見諒。</string>
    <string name="faq_title_9">如何聯絡客服或提供意見？</string>
    <string name="faq_ans_9">聯絡方式：在 APP 的「設定」頁面中，點擊「關於我們」選項，查看聯繫方式，並可透過問卷提交問題或建議。若遇到技術問題，建議附上螢幕截圖或錯誤描述，以便我們更快速地協助您。</string>
    <string name="faq_title_10">遇到問題或錯誤，該如何重啟或重新安裝？</string>
    <string name="faq_ans_10">重啟 APP：若 APP 無法正常使用，可嘗試關閉後重新打開。\n清除快取：在手機「設定」>「應用程式」> 找到該 APP，點選「儲存空間」，然後點擊「清除快取」。\n重新安裝：若問題依舊，建議移除 APP 並重新安裝。重新安裝後，請再次登入您的帳戶。\n回報我們：如問題持續發生，請聯絡客服並附上問題說明，讓我們協助解決。</string>
    <string name="faq_title_11">你們的API的資料來源為何處</string>
    <string name="faq_ans_11">我們主要從兩個部分取得\n台北捷運API: 台北捷運API提供了捷運的搭乘所需時間、到站時間等資訊，讓我們可以透過呼叫API取得所需的站點資訊。\n資料介接「交通部TDX平臺」運輸資料流通服務TDX API： 運輸資料流通服務TDX API提供了提供眾多公共交通運輸數據的API，我們使用了捷運的站點內設施、票價等資訊，讓我們可以透過呼叫API取得所需的站點資訊。</string>
    <string name="data_integration_taipei_metro">資料介接「台北捷運」</string>
    <string name="data_integration_tdx_platform">資料介接「台灣交通部TDX平臺」</string>
    <string name="about_form_title">意見回饋與問題回報</string>
    <string name="about_form_text">您的意見是我們進步的動力！如果您有建議、反饋或遇到問題，請讓我們知道。填寫反饋表單後，我們會仔細閱讀每一條反饋，並努力改進，以提供更好的應用體驗。</string>
    <string name="about_form_btn">立即回報</string>
    <string name="Guest_Title">遊客帳戶</string>
    <string name="SetStation">設定站點：</string>
    <string name="Train_Approaching">列車進站中</string>
    <string name="End_Service">營運時間已過</string>
    <string name="Loading_Data">資料擷取中</string>
    <string name="after_login">登入後查看</string>
    <string name="input_all_fields">請輸入所有欄位</string>
    <string name="registration_success">註冊成功</string>
    <string name="save_user_data_failed">儲存資料失敗，重試或回報</string>
    <string name="email_already_registered">郵箱已註冊</string>
    <string name="registration_failed">註冊失敗，重試或回報</string>
    <string name="image_upload_failed">圖片上傳失敗，重試或回報</string>
    <string name="image_saved_successfully">圖片儲存成功</string>
    <string name="image_save_failed">儲存圖片失敗，重試或回報</string>
    <string name="operation_too_fast">操作過快，請稍後再試</string>
    <string name="station_already_visited">無法登記，站已到達</string>
    <string name="station_not_exist">該站不存在</string>
    <string name="document_not_exist">文件不存在，重試或回報</string>
    <string name="read_failed">讀取失敗，重試或回報</string>
    <string name="clear_and_retry">請清除後再試</string>
    <string name="enter_new_name">輸入新名稱</string>
    <string name="get_user_data_failed">獲取資料失敗，重試或回報</string>
    <string name="modified">已修改</string>
    <string name="creating_widget">建立小工具中</string>
    <string name="confirm_widget_request">確認小工具申請</string>
    <string name="request_failed">請求失敗，系統不支持</string>
    <string name="widget_not_supported">小工具不支持</string>
    <string name="change_successful">更改成功</string>
    <string name="change_name_failed">更改名字失敗，重試或回報</string>
    <string name="reset_password_email_sent">重置密碼郵件已發送</string>
    <string name="reset_password_email_failed">郵件發送失敗，重試或回報</string>
    <string name="failure_retry_or_report">失敗，重試或回報</string>
    <string name="qr_code_generation_failed">無法生成 QR 碼，重試或回報</string>
    <string name="widget_added_to_home">小工具已添加到桌面</string>
    <string name="registration_successful">登記成功</string>
    <string name="registration_failed_retry_or_report">登記失敗，重試或回報</string>
    <string name="camera_required">必須開啟相機才可使用</string>
    <string name="please_select_station_name">請點選站名</string>
    <string name="insufficient_coins">所需硬幣不夠</string>
</resources>